--- a/src/App.scss
+++ b/src/App.scss
@@ -308,11 +308,23 @@ a{
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    &-number{
+      margin-left: 16px;
+      color: #333;
+      font-weight: 500;
+      margin-top: 8px;
+    }
     &-first{
       flex: 1;
       h3{
         margin-bottom: 4px;
       }
+      p{
+        font-size: 14px;
+      }
+    }
+    &-second{
+      margin-right: 20px;
     }
   }
   &_graph img{
