--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,7 @@ a{
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     background-color: #a55497;
     opacity: 0;
     z-index: 1;
